<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in_sign_in">로그인</string>
    <string name="sign_in_sign_up">회원가입</string>
    <string name="sign_in_login_id_hint">아이디(Koreatech ID/전화번호)</string>
    <string name="sign_in_password_hint">비밀번호</string>
    <string name="sign_in_error">아이디 또는 비밀번호가 올바르지 않습니다.</string>
    <string name="sign_in_find_login_id">아이디 찾기</string>
    <string name="sign_in_find_password">비밀번호 찾기</string>
    <string name="sign_in_tour">둘러보기</string>
    <string name="sign_in_business">사장님이신가요?</string>
</resources>