...
    <string name="recruitment_activity_card_edit">수정</string>
    <string name="recruitment_activity_card_period_label">활동 기간</string>
    <string name="recruitment_activity_card_content_label">활동 내용</string>
    <string name="recruitment_activity_confirm">완료</string>

    <string name="recruitment_apply_title">팀원 모집 지원</string>
    <string name="recruitment_apply_step_one_label">기본 정보</string>
    <string name="recruitment_apply_step_two_label">지원서 작성</string>
    <string name="recruitment_apply_char_count">%1$d/%2$d</string>
    <string name="recruitment_apply_load_member_info">코인 회원정보 불러오기</string>
    <string name="recruitment_apply_load_member_info_hint">닉네임, 학과(학부), 학번</string>
    <string name="recruitment_apply_load_member_info_button">회원정보 불러오기</string>
    <string name="recruitment_apply_nickname">닉네임</string>
...
