appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: ../common/open_drawer.yaml
- tapOn:
    id: "${APP_ID}:id/navi_item_setting"
- extendedWaitUntil:
    visible: "설정"
    timeout: 15000
- assertVisible: "설정"
- assertVisible: "개인정보 처리방침"
- assertVisible: "앱 버전"
